# ghc

./: .gitignore  .gitlab-ci.yml  configure.ac
.gitlab/: ci.sh  jobs.yaml
.gitlab/generate-ci/: gen_ci.hs
.gitlab/rel_eng/fetch-gitlab-artifacts/: fetch_gitlab.py
.gitlab/rel_eng/mk-ghcup-metadata/: mk_ghcup_metadata.py
compiler/: GHC.hs  ghc.cabal.in
compiler/GHC/: HsToCore.hs  IfaceToCore.hs  Parser.y  StgToByteCode.hs  ThToHs.hs
compiler/GHC/Builtin/: Names.hs  Types.hs  (+3 more)
compiler/cbits/: genSym.c
distrib/: configure.ac.in
docs/: coding-style.html
docs/users_guide/: 9.14.1-notes.rst  runtime_control.rst  using-optimisation.rst  using-warnings.rst
ghc/: Main.hs
ghc/GHCi/: Leak.hs  UI.hs
hadrian/doc/: flavours.md
hadrian/src/: CommandLine.hs  Flavour.hs
libraries/base/: base.cabal.in  changelog.md
libraries/ghc-internal/: ghc-internal.cabal.in
libraries/ghc-prim/: changelog.md
libraries/template-haskell/: changelog.md  template-haskell.cabal.in
list-submodules/: list-submodules.cabal  shell.nix
list-submodules/app/: Main.hs
list-submodules/src/: CheckSubmodules.hs
m4/: fp_set_cflags_c11.m4
rts/: BeginPrivate.h  Capability.h  EndPrivate.h  Interpreter.c  PrimOps.cmm  RtsFlags.c  RtsStartup.c  RtsSymbols.c  Schedule.c  configure.ac  rts.cabal
rts/include/: Cmm.h  Rts.h  RtsAPI.h
rts/posix/: OSMem.c
rts/sm/: CNF.c  GC.c  GCThread.h  NonMoving.h  Storage.c
rts/wasm/: OSMem.c
testsuite/driver/: testlib.py
utils/check-exact/: ExactPrint.hs
utils/dump-decls/: Main.hs
utils/genprimopcode/: Main.hs
utils/jsffi/: dyld.mjs
(+236 files in other folders)
